@@ -1,3 +1,8 @@
+TAG: gxdimageload-5-1-5-1
+STAFF: lec
+CHANGES: 
+1) TR11350/remove thumbnail stuff
+
 TAG: gxdimageload-5-0-0-3
 TAG: gxdimageload-5-0-0-2
 TAG: gxdimageload-5-0-0-1
